2003-10-30  Chris Toshok  <toshok@ximian.com>

	* configure.in: (AC_OUTPUT): remove smime/tests for now.

2003-10-30  Chris Toshok  <toshok@ximian.com>

	* configure.in: set enable_smime=yes wherever nss would be
	enabled..  fixes manually specifying the nss libs and enabling the
	smime ui.  Also, add a section for generating the correct SMIME UI
	flags.  gross, but necessary.  it should probably be wrapped in
	with all the other nss library crap.
	(AC_OUTPUT): add smime/tests

2003-10-29  Chris Toshok  <toshok@ximian.com>

	* Makefile.am (SUBDIRS): use $SMIME_DIR. instead of explicitly
	including smime.

	* configure.in: add some smime foo - a status message, an
	AM_CONDITIONAL (ENABLE_SMIME)

2003-10-17  Jeffrey Stedfast  <fejj@ximian.com>

	* configure.in: added a configure check for AI_ADDRCONFIG

2003-10-24  Dan Winship  <danw@ximian.com>

	* libversit/Makefile.am: Change YFLAGS to AM_YFLAGS to stop an
	automake 1.7 warning

2003-10-23  Rodney Dawes  <dobey@ximian.com>

	* confiugre.in: Remove mail/importers/Makefile from AC_OUTPUT
	yet again

2003-10-23  Chris Toshok  <toshok@ximian.com>

	* configure.in: add smime/* dirs. to AC_OUTPUT.

	* Makefile.am (SUBDIRS): add smime/.

2003-10-23  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* configure.in: Check for gnome-thumbnail.h existence 
	(really committed this time).
	
2003-10-22  Ettore Perazzoli  <ettore@ximian.com>

	* configure.in: Set $ACLOCAL to have the $ACLOCAL_FLAGS in it, so
	it doesn't fail to regenerate the files if you run make without a
	manual autogen after making changes to configure.in and friends.
	[Many thanks to Marco Pesenti Gritti for pointing out the fix to
	me.]

2003-10-22  Rodney Dawes  <dobey@ximian.com>

	* configure.in: Require ORBit 2.8.0 or newer for threading

2003-10-22  Rodney Dawes  <dobey@ximian.com>

	* configure.in: Revert broken previous commit and actually remove
	mail/importers/Makefile from AC_OUTPUT

2003-10-22  Rodney Dawes  <dobey@ximian.com>
