@@ -1258,6 +1258,19 @@ AC_SUBST(etspecdir)
 viewsdir="$privdatadir/views"
 AC_SUBST(viewsdir)
 
+dnl ************************
+dnl IDL/Component Versioning
+dnl ************************
+
+INTERFACE_VERSION="$BASE_VERSION"
+AC_SUBST(INTERFACE_VERSION)
+AC_DEFINE_UNQUOTED(INTERFACE_VERSION, "INTERFACE_VERSION", [IDL interface version (Major.Minor)])
+
+EVO_SUBST_SERVER_RULE='%.server.in: %.server.in.in ; sed -e "s|\@BINDIR\@|$(bindir)|" -e "s|\@LIBEXECDIR\@|$(privlibexecdir)|" -e "s|\@COMPONENTDIR\@|$(componentdir)|" -e "s|\@IMPORTERSDIR\@|$(importersdir)|" -e "s|\@VERSION\@|$(BASE_VERSION)|" -e "s|\@INTERFACE_VERSION\@|$(INTERFACE_VERSION)|" $< > $@'
+EVO_NAME_SERVER_RULE='%_$(BASE_VERSION).server: %.server ; mv $< $@'
+AC_SUBST(EVO_SUBST_SERVER_RULE)
+AC_SUBST(EVO_NAME_SERVER_RULE)
+
 ##################################################
 # Check for gtk-doc.
 ##################################################
